ULAB-CAP-01 backend updates to use appointment unix time as dynamodb sort key; fixed attach files req

--- a/backend/src/requests/UpdateAppointmentRequest.json
+++ b/backend/src/requests/UpdateAppointmentRequest.json
@@ -3,10 +3,10 @@
   "title": "appointment",
   "type": "object",
   "properties": {
-    "dueDatetime": {
-      "type": "string"
+    "done": {
+      "type": "boolean"
     }
   },
-  "required": ["dueDatetime"],
+  "required": ["done"],
   "additionalProperties": false
 }
