--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -16,9 +16,10 @@ provider:
     AWS_NODEJS_CONNECTION_REUSE_ENABLED: 1
     STAFF_TABLE: staff-sls-${self:provider.stage}
     APPOINTMENTS_TABLE: meet-sls-${self:provider.stage}
-    APPOINTMENTS_BY_DATE_IDX: DueDatetimeIdx
+    APPOINTMENTS_BY_USER_STAFF_IDX: UserStaffIdx
     APPOINTMENTS_BY_STAFF_IDX: StaffIdx
     ATTACHMENTS_BUCKET: files-sls-${self:provider.stage}
+    SIGNED_URL_EXPIRATION: 600
 
 package:
   excludeDevDependencies: true
@@ -81,6 +82,11 @@ functions:
           - arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.APPOINTMENTS_TABLE}
       - Effect: Allow
         Action:
+          - dynamodb:Query
+        Resource: 
+          - arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.APPOINTMENTS_TABLE}/index/*  
+      - Effect: Allow
+        Action:
           - dynamodb:GetItem
         Resource: 
           - arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.STAFF_TABLE}      
@@ -90,7 +96,7 @@ functions:
     events:
       - http:
           method: delete
-          path: appointments/{appointmentId}
+          path: appointments/{appDateTimeId}
           cors: true
           authorizer: Auth
     iamRoleStatements:
@@ -101,32 +107,32 @@ functions:
         Resource: 
           - arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.APPOINTMENTS_TABLE}         
 
-#  UpdateAppointment:
-#    handler: src/lambda/http/appointments/update.handler
-#    events:
-#      - http:
-#          method: patch
-#          path: appointments/{appointmentId}
-#          cors: true
-#          authorizer: Auth
-#          request:
+  UpdateAppointment:
+    handler: src/lambda/http/appointments/update.handler
+    events:
+      - http:
+          method: patch
+          path: appointments/{appDateTimeId}
+          cors: true
+          authorizer: Auth
+          request:
             # or use serverless-reqvalidator-plugin
-#            schema: 
-#              application/json: ${file(src/requests/UpdateAppointmentRequest.json)}
-#    iamRoleStatements:
-#      - Effect: Allow
-#        Action:
-#          - dynamodb:UpdateItem
-#          - dynamodb:GetItem
-#        Resource: 
-#          - arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.APPOINTMENTS_TABLE}
+            schema: 
+              application/json: ${file(src/requests/UpdateAppointmentRequest.json)}
+    iamRoleStatements:
+      - Effect: Allow
+        Action:
+          - dynamodb:UpdateItem
+          - dynamodb:GetItem
+        Resource: 
+          - arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.APPOINTMENTS_TABLE}
 
   AttachFile:
     handler: src/lambda/http/appointments/attachFile.handler
     events:
       - http:
           method: post
-          path: appointments/{appointmentId}/attachment
+          path: appointments/{appDateTimeId}/attachment/{filename}
           cors: true
           authorizer: Auth
     iamRoleStatements:
@@ -135,7 +141,7 @@ functions:
           - s3:getObject
           - s3:putObject
         Resource: 
-          - arn:aws:s3:::${self:provider.environment.APPOINTMENTS_TABLE}/*
+          - arn:aws:s3:::${self:provider.environment.ATTACHMENTS_BUCKET}/*
       - Effect: Allow
         Action:
           - dynamodb:GetItem
@@ -163,35 +169,37 @@ resources:
         AttributeDefinitions:
           - AttributeName: userId
             AttributeType: S
-          - AttributeName: appointmentId
-            AttributeType: S
+          - AttributeName: dueDatetime
+            AttributeType: N
           - AttributeName: staffId
-            AttributeType: S  
+            AttributeType: S
         KeySchema:
           - AttributeName: userId
             KeyType: HASH
-          - AttributeName: appointmentId
+          - AttributeName: dueDatetime
             KeyType: RANGE  
         BillingMode: PAY_PER_REQUEST
         TableName: ${self:provider.environment.APPOINTMENTS_TABLE}
         LocalSecondaryIndexes:
-          - IndexName: ${self:provider.environment.APPOINTMENTS_BY_DATE_IDX}
+          - IndexName: ${self:provider.environment.APPOINTMENTS_BY_USER_STAFF_IDX}
             KeySchema:
               - AttributeName: userId
                 KeyType: HASH
               - AttributeName: staffId
                 KeyType: RANGE
             Projection:
-              ProjectionType: ALL
+              ProjectionType: INCLUDE
+              NonKeyAttributes: 
+                - attachmentsURL
         GlobalSecondaryIndexes:
           - IndexName: ${self:provider.environment.APPOINTMENTS_BY_STAFF_IDX}
             KeySchema:
               - AttributeName: staffId
                 KeyType: HASH
-              - AttributeName: appointmentId
+              - AttributeName: dueDatetime
                 KeyType: RANGE
             Projection:
-              ProjectionType: ALL      
+              ProjectionType: KEYS_ONLY      
 
     GatewayResponseDefault4XX:
       Type: AWS::ApiGateway::GatewayResponse
@@ -231,4 +239,4 @@ resources:
                 - '*'
               AllowedHeaders:
                 - '*'
-              MaxAge: 300
+              MaxAge: 7200
