--- a/backend/src/requests/CreateAppointmentRequest.json
+++ b/backend/src/requests/CreateAppointmentRequest.json
@@ -10,7 +10,7 @@
       "type": "string"
     },
     "dueDatetime": {
-      "type": "string"
+      "type": "number"
     }
   },
   "required": ["staffId", "name", "dueDatetime"],
